--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "青青学生证",
     "navigationBarTextStyle":"black"
   }
 }
