增加图片裁剪 TODO： 1. 结果界面优化 2. 裁剪参数优化 3. 关于描述更新 4. 程序名更新 ....

--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
+    "pages/upload/upload",
     "pages/logs/logs",
     "pages/xsz/xsz"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "青青学生证",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   }
 }
